update: jd/css/jd.css: size of header content; fix: jd/css/jd.css: header content not center aligned

--- a/jd/css/jd.css
+++ b/jd/css/jd.css
@@ -15,3 +15,10 @@
 	background: #ccc;
 	width: 100%;
 }
+
+.header_content {
+	border: 1px solid red;
+	height: 100px;
+	margin: 0 auto;
+	width: 1200px;
+}
